--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,12 @@ h1, h2, h3 {
     line-height: 1.3;
 }
 
+// Fix the broken hover rule which causes ugly reflows all the time.
+a:hover, a:focus {
+  text-decoration: underline !important;
+  font-weight: inherit !important;
+}
+
 // Make it look like the vanilla TW5 theme.
 code {
   color: #dd1144;
